<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_myevents">My Organized Events</string>
    <string name="menu_enteredevents">My Entered Events</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="admin_menu">App Management</string>
    <string name="your_name">Your Name</string>
    <string name="email_address">Email Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="for_organizers">For Organizers:</string>
    <string name="facility_name">Facility Name</string>
    <string name="facility_location">Facility Location</string>

    <string name="facility_delete_confirmation">Are you sure you would like to delete this facility?</string>
    <string name="your_profile">Your Profile</string>
    <string name="require_geolocation">Require Geolocation</string>
    <string name="event_name">Event Name</string>
    <string name="poster">Poster</string>
    <string name="no_poster">(No Poster)</string>
    <string name="sample_date_time">3:00 PM on 3 November 2024</string>
    <string name="ccis_university_of_alberta">CCIS, University of Alberta</string>
    <string name="loc_confirm">This event requires you to share your location with the organizer. Are you sure?</string>
    <string name="register_for_lottery">Register For Lottery</string>
    <string name="canceled">Scan canceled</string>
    <string name="qr_view_text">Event QR Code:</string>
    <string name="title_activity_geolocation_view_googlemaps">Geolocation_view_googlemaps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_metrics">User Metrics</string>
    <string name="user_name">User Name</string>

</resources>