...
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/admin_layout">

        <Button
            android:id="@+id/nav_admin_profile"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:fontFamily="@font/belanosima"
            android:layout_gravity="center"
            android:text="Profiles"
            android:textStyle="bold"
...
        <Button
            android:id="@+id/nav_admin_event"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:fontFamily="@font/belanosima"
            android:layout_gravity="center"
            android:text="Events"
            android:background="@drawable/mybutton"
            android:layout_marginTop="30dp"
            android:textColor="@color/bonus_yellow"/>

        <Button
            android:id="@+id/nav_admin_facility"
...
