<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_gray"
    android:id="@+id/frag_notifications"
    tools:context=".ui.notifications.NotificationsFragment">

<!--    <Button-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/test_button"-->
<!--        tools:ignore="MissingConstraints" />-->

    <ListView
        android:id="@+id/notifications_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@color/text_cyan"
        android:dividerHeight="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>