<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_gray"
    android:id="@+id/my_entered_events"
    tools:context=".ui.registeredevents.RegisteredEventFragment">

    <ListView
        android:id="@+id/registered_event_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@color/text_cyan"
        android:dividerHeight="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/qr_button"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="28dp"
        app:srcCompat="@drawable/ic_qr_scanner"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:tint="@color/bonus_yellow"
        style="@style/CustomFABStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>